# bank-repository

./: main.py  requirements.txt  to_do.txt
bases/bank/: bankactions.py
bases/demo/greet_api/: core.py
bases/greet_api/: core.py
components/bank/country_specific/bank_Netherlands/: bank.py
components/demo/log/: core.py
components/demo/message/: __init__.py  core.py
components/fake_data_base/: data.py
components/log/: __init__..py
components/message/: __init__.py
projects/bank/: Dockerfile  README.md  pyproject.toml  requirements.txt  to_do.txt
src/: bank.py
src/bank_Netherlands/: bank.py
test/: test_first.py
