[tool.poetry]
name = "bank"
version = "0.0.1"
description = "an example FastAPI project"
authors = ["Quinten van Velzen"]
packages = [
    {include = "demo/log", from = "../../components"},
    {include = "demo/message", from = "../../components"},
    {include = "demo/greet_api", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
